syntax = "proto3";

package com.example.service1.domain;

message DoNothing {}

message NoState {}